--- a/view/attendance-house.html
+++ b/view/attendance-house.html
@@ -91,10 +91,10 @@
           <tr>
             <th>Party</th>
             <th>Number of Reps</th>
-            <th>% Voted with Prty</th>
+            <th>% Voted with Party</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody >
           <tr>
             <td>Republicans</td>
             <td>--</td>
@@ -132,7 +132,7 @@
               <th>% Missed</th>
             </tr>
           </thead>
-          <tbody>
+          <tbody id="leastEngaged">
             <tr>
               <td>--</td>
               <td>--</td>
@@ -176,7 +176,7 @@
               <th>% Missed</th>
             </tr>
           </thead>
-          <tbody>
+          <tbody id="mostEngaged">
             <tr>
               <td>--</td>
               <td>--</td>
@@ -221,7 +221,7 @@
   </div>
 </div>
 
-    <script src="../scripts/tgif.js"></script>
+    <script src="../scripts/attendance-house.js"></script>
 <!--Bootstrap JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
