--- a/view/attendance-senate.html
+++ b/view/attendance-senate.html
@@ -91,22 +91,7 @@
             <th>% Voted with Party</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>Republican</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>Democrat</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
-          <tr>
-            <td>Independent</td>
-            <td>--</td>
-            <td>--</td>
-          </tr>
+        <tbody id="tbodyContentTable3">
         </tbody>
       </table>
       </div>
